# test_project

./: .gitignore  README.md  pyproject.toml  setup.py
jupyter/: hello_world.ipynb
src/myproject/: mymodule.py
